packages/checkout-full/core/src/components/plug-checkout-full/partials/plug-checkout-full-content/plug-checkout-full-content.scss
.plug-checkout-full-content__container {
  display: block;
  width: 100%;
  height: 100%;
}

.plug-checkout-full-content__main {
  display: flex;
  flex-direction: column;
  height: 100%;
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 var(--plug-checkout-spacing-sm);

  @include md {
    flex-direction: row;
    justify-content: space-between;
  }
}

.plug-checkout-full-content__section {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-bottom: var(--plug-checkout-spacing-sm);

  @include md {
    margin-bottom: 0;
  }

  &:first-child {
    @include md {
      margin-right: var(--plug-checkout-spacing-md);
    }
  }

  &:nth-child(2) {
    @include md {
      margin-left: var(--plug-checkout-spacing-md);
    }
  }
}

